# revolut2csvqif

./: pyproject.toml
src/revolutcsv2qif/: main.py
